update gsf api
